# All-practice

./: CMakeLists.txt  Popen.cpp  README.md  client.c  gps_data.h  gps_manager.cpp  gps_manager.h  gps_test.c  ip.txt  main.c  mobile_network.cpp  mobile_network.h  mt9v034_demo.c  project1_unittest.cc  regex.cpp  sample1_unittest.cc  sock.h  sock_write.c  string.cpp  vector.cpp  wifi.cpp  wifi.h  wifi_unittest.cpp  yuv_practice.cpp
Alsa/: bVoiceTest  cVoiceTest  lplay.c  sndwav_common.c  sndwav_common.h  wav_parser.c  wav_parser.h
TestVoice/: VoiceManager.cpp  VoiceManager.h  VoiceManager_unittest.cpp  lplay.c  sndwav_common.c  sndwav_common.h  wav_parser.c  wav_parser.h
VoiceManager/: VoiceManager.cpp  VoiceManager.h  VoiceManager_unittest.cpp
gtest/codes/: product_coverage_report.sh
voice_cs/: voice.c
voice_cs/app/: test.c  voice_app  voice_app.c
